<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/showuserdetails_layoutPadding"
    tools:context=".ShowUserDetails">


    <EditText
        android:id="@+id/show_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_marginTop"
        android:backgroundTint="@color/tv_signup_color"
        android:enabled="false"
        android:textSize="@dimen/et_txtSize" />

    <EditText
        android:id="@+id/show_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_marginTop"
        android:backgroundTint="@color/tv_signup_color"
        android:enabled="false"
        android:textSize="@dimen/et_txtSize" />


    <EditText
        android:id="@+id/show_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_marginTop"
        android:backgroundTint="@color/tv_signup_color"
        android:enabled="false"
        android:textSize="@dimen/et_txtSize" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="@dimen/btn_zero_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_marginTop"
            android:layout_marginRight="@dimen/btn_edit_marginRight"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/btn_editText"
            android:textSize="@dimen/btn_txtSize_signupPage" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="@dimen/btn_zero_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_update_marginLeft"
            android:layout_marginTop="@dimen/et_marginTop"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:text="@string/btn_textupdate"
            android:textSize="@dimen/btn_txtSize_signupPage" />

    </LinearLayout>


    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTop_tvLogout"
        android:clickable="true"
        android:fontFamily="serif"
        android:text="@string/tv_logout"
        android:textColor="@drawable/color_change" />


    <TextView
        android:id="@+id/delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTop_tvDelete"
        android:clickable="true"
        android:fontFamily="serif"
        android:text="@string/tv_delete_account"
        android:textColor="@drawable/color_change" />

</LinearLayout>